# lsrtm

./: README.md
2022-05/: example.rs  index.md
2022-06/: custom.css  index.html  index.md
2022-06/images/: .$circle-layout.svg.bkp  .$enum-shape-layout-1.svg.bkp  .$enum-shape-layout-2.svg.bkp
2022-09/: index.html  index.md
2023-05/: custom.css  index.html  index.md
2023-06/: custom.css  index.html  index.md  key ideas.md
2023-06/images/: .$js-promise.drawio.svg.bkp  .$rust-combinator-step-1.drawio.svg.bkp  .$rust-combinator-step-2.drawio.svg.bkp  .$rust-combinator-step-3.drawio.svg.bkp  .$rust-combinator-step-4.drawio.svg.bkp  .$rust-combinator.drawio.svg.bkp  .$rust-fu-step-1.drawio.svg.bkp  .$rust-fu-step-2.drawio.svg.bkp  .$rust-fu-step-3.drawio.svg.bkp  .$rust-fu-step-4.drawio.svg.bkp  .$rust-fu-step-5.drawio.svg.bkp  .$rust-fu.drawio.svg.bkp  .$rust-promise-step-1.drawio.svg.bkp  .$rust-promise-step-2.drawio.svg.bkp  .$rust-promise.drawio.svg.bkp  .$rust-snippet-send-step-1.drawio.svg.bkp  .$rust-snippet-send-step-2.drawio.svg.bkp  .$rust-snippet-send.drawio.svg.bkp
2023-10/: custom.css  index.html  index.md  outline.md
2023-10/code/cffi/: Cargo.toml  build.rs
2023-10/code/cffi/src/: fib.c  lib.rs  main.rs
2023-10/code/cxxffi/: Cargo.toml  README.md
2023-10/code/cxxffi/src/: blobstore.cc  main.rs
2023-10/code/javaffi/: Cargo.toml  build.rs
2023-10/code/pyffi/: Cargo.toml  pyproject.toml  script.md  typescript
2023-10/code/pyffi/src/: lib.rs  part1.rs  part2.rs  part3.rs  part4.rs  part5.rs  part6.rs  part7.rs  part8.rs
(+8 files in other folders)
